# base

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODOS.md  agentfleet.toml  dev.py  dev.sh  plan.md  pyproject.toml
.agents/workflows/: run-fractal.md
.claude/: OBSIDIAN_KB.md
.cursor/rules/: obsidian-knowledge-base.mdc
.github/workflows/: branch-reaper.yml  ci.yml  main-health.yml  pr-gate.yml  refresh-data.yml
agent_fleet/: __init__.py  cli.py  commands.py  config.py  doctor.py  fleet.py  handoff_prompt.py  models.py  npm_pkg.py  preview.py  style.py
apps/habitpulse-ios/: .gitignore  README.md  project.yml
benchmarks/: __init__.py  chronos_published.py  core.py  metrics.py  report.py
benchmarks/cache/: .gitignore
benchmarks/datasets/: __init__.py  finance.py  m4.py  nn5.py
benchmarks/results/: .gitignore  REPORT.md  raw.jsonl  sample_REPORT.md  sample_raw.jsonl
benchmarks/runners/: __init__.py  run.py
benchmarks/systems/: __init__.py  engine.py  matrix_profile.py  naive.py
design_guideline/: README.md  cadence.md  lumen.md  prudent.md  tomorrow.md  workstation.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_LANGUAGE.md  README.md  THEORY.md
docs/agent-harness/: README.md  agent-legibility.md  golden-principles.md  operating-model.md  quality-scorecard.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  march_architecture.md
docs/design/: COPY_DATA_WORLD_MODELS_REF.md  DESIGN_LANGUAGE.md
docs/overview/: README.md
docs/planning/: JEPA_AUTORESEARCH_ENHANCEMENTS.md  JEPA_INTEGRATION_SPEC.md  JEPA_NEXT_TASKS.md  TODOS.md  finance_pilot_v1.md  plan.md  plan_april14.md
docs/tutorials/: 01_quickstart.ipynb  02_configuration.ipynb  03_backtesting.ipynb
examples/: 3d_state_space_demo.py  event_prediction_demo.py  finance_benchmark_v2.py  finance_workflow_v1.py  nl_to_timeseries_demo.py  synthetic_copies_comparison.py
obsidian_thesim/: Engineers start here.md  Forecast cone in plain English.md  How the matcher works (simple).md  Product story and competition.md  Research hub.md  Start here — non-technical readers.md  The question we answer.md  Walk-forward validation.md  Welcome.md  Why nine lenses.md  Why pattern match is hard.md  _MOC.md
obsidian_thesim/.obsidian/: graph.json  workspace.json
obsidian_thesim/concepts/: Benchmark slices.md  Engine map.md  (+70 more)
orchestrator/: .gitignore  config.py  discover.py  run.py  tasks.example.yaml
progress/: .progress3_9.md.swp  progress3_9.md
research/: 02-fractal-analysis-power-laws.md  03-koopman-operator-dmd.md  04-tda-emd-wavelets-sax-matrix-profile.md  README.md  presenting_idea.md
scripts/: check_agent_harness.py  ci_local.sh  smoke_3d_state_space.sh  smoke_copies_v2.sh  smoke_event_prediction.sh  smoke_finance_operating.sh  smoke_nl_ts.sh  smoke_platform_spine.sh  smoke_worlds_v2.sh
the-similarity-app/: .env.local.example  .gitignore  TODOS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
the-similarity-data/: .gitignore  pyproject.toml
the-similarity-data/config/: datasets.json
the-similarity-data/fixtures/: hurdat2-tiny.txt
the-similarity-data/logs/: refresh.launchd.err
the-similarity-data/manifests/: catalog.json
the-similarity-data/scripts/: fetch_hurdat2.py  refresh-gold.sh  refresh_all.py  refresh_loop.py
the-similarity-data/tests/: test_config.py  test_generate_specs.py  test_manifest.py  test_models.py  test_normalize.py  test_refresh.py  test_stooq_fetcher.py  test_storage.py  test_warehouse.py
the-similarity-data/the_similarity_data/: __init__.py  config.py  generate_specs.py  manifest.py  models.py  normalize.py  refresh.py  seed_gold.py  storage.py  warehouse.py
the-similarity-data/the_similarity_data/fetchers/: __init__.py  crypto_ccxt.py  forex_twelvedata.py  market_yfinance.py  stooq_daily.py
the-similarity-fractal/: 3d_sim_plan.md  index.html  package.json
the-similarity-playground/: playground.py  pyproject.toml
the-similarity-playground/notebooks/: theory_playground.ipynb
the_similarity/: __init__.py  api.py  config.py
tradingview/: README.md  similarity_indicator.pine  similarity_strategy.pine
vision/: 3d_data_space.md  README.md  app_ideas_20.md  app_ideas_20_mac_ios.md  better_engine_research_summary_414.md  elevator_pitch_414.md  finance_operating_product.md  findings_deck_414.html  findings_deck_phase2_414.html  investor_pitching_guide_414.md  launch_memo_2026-04-15.md  map_april_4.md  nl_to_timeseries.md  personalized_setup_scanner.md  pitch_deck_414.html  pitch_deck_414.md  platform.md  platform_object_model.md  platform_spine_batch1.md  setup_scanner_schema_contract.md  synthetic_copies_v2.md  synthetic_copies_worlds_eval_mvp.md  synthetic_data_platform.md  synthetic_worlds_eval.md  synthetic_worlds_v2.md  world_event_prediction.md
vision2035/: VISION.md
(+897 files in other folders)
