[tool.poetry]
name = "the-similarity"
version = "0.2.0"
description = "Research-grade time series pattern matching and prediction using 9 mathematical methods"
authors = ["Buyantogtokh"]
license = "MIT"
readme = "docs/overview/README.md"
homepage = "https://github.com/the-similarity/base"
repository = "https://github.com/the-similarity/base"
keywords = ["time-series", "pattern-matching", "dtw", "koopman", "forecasting", "similarity-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "the_similarity"}]
exclude = ["the_similarity/tests/**", "**/*.swp"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
pandas = "^2.1"
scipy = "^1.11"
dtaidistance = "^2.3"
EMD-signal = "^1.6"
PyWavelets = "^1.5"
matplotlib = "^3.8"
pydantic = "^2.11"
ripser = {version = "^0.6", optional = true}
persim = {version = "^0.3", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]
tda = ["ripser", "persim"]

[tool.poetry.group.api.dependencies]
fastapi = "^0.115"
uvicorn = "^0.34"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["the_similarity/tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
