[tool.poetry]
name = "the-similarity-playground"
version = "0.1.0"
description = "Research playground for The Similarity"
authors = ["Buyantogtokh"]
license = "MIT"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "*"
ipywidgets = ">=8.0"
jupyter = "*"
matplotlib = "*"
nbformat = "*"
numpy = "*"
pandas = "*"
plotly = ">=5.0"
pyarrow = "*"
requests = "*"
the-similarity = { path = "..", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
